--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -1,72 +1,61 @@
-# -----------------------------------------------------------------
-# A fresh, rewritten workflow for the Fantasy Football Data Pipeline
-# -----------------------------------------------------------------
-name: Fantasy Football Data Pipeline
+name: Hourly Data Build
 
 on:
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-  # Runs automatically at 9 minutes past every hour
   schedule:
     - cron: '9 * * * *'
 
 jobs:
-  # The main job that will run on your server
-  fetch-and-process:
-    name: Fetch and Process ESPN Data
+  build-and-commit-data:
     runs-on: [self-hosted, Linux, X64]
 
+    env:
+      LEAGUE_ID: ${{ vars.LEAGUE_ID }}
+      ESPN_USER: ${{ secrets.ESPN_USER }}
+      ESPN_PASS: ${{ secrets.ESPN_PASS }}
+      PLAYWRIGHT_BROWSERS_PATH: /home/ghrunner/.cache/ms-playwright
+      PLAYWRIGHT_SKIP_VALIDATE_HOST_REQUIREMENTS: 1
+
     steps:
-      # Step 1: Get a copy of your repository's code
-      - name: 1. Checkout Code
+      - name: Checkout Repo
         uses: actions/checkout@v4
 
-      # Step 2: Set up the Python environment
-      - name: 2. Set up Python
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      # Step 3: Cache dependencies to speed up future runs
-      - name: 3. Cache Dependencies
+      - name: Cache Python dependencies
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-      # Step 4: Cache the Playwright browser to save disk space
-      - name: 4. Cache Browser
+      - name: Cache Playwright browsers
         uses: actions/cache@v4
         with:
-          path: /home/ghrunner/.cache/ms-playwright
+          path: ${{ env.PLAYWRIGHT_BROWSERS_PATH }}
           key: ${{ runner.os }}-playwright-chromium
+          restore-keys: |
+            ${{ runner.os }}-playwright-
 
-      # Step 5: Install the required Python libraries
-      - name: 5. Install Python Libraries
+      - name: Install Python Dependencies
         run: pip install -r requirements.txt
 
-      # Step 6: Ensure the Playwright browser is installed
-      - name: 6. Install Playwright Browser
+      - name: Ensure Chromium Browser is Installed
         run: python -m playwright install chromium
-        env:
-          PLAYWRIGHT_BROWSERS_PATH: /home/ghrunner/.cache/ms-playwright
 
-      # Step 7: Run the Python scripts to get and clean the data
-      - name: 7. Run Data Pipeline Scripts
-        run: |
-          echo "--- Starting Step 1: Fetching Raw Data ---"
-          python ${{ github.workspace }}/pipeline/fetch_all_with_playwright.py
-          echo "--- Starting Step 2: Processing Clean Data ---"
-          python ${{ github.workspace }}/pipeline/process_data.py
-        env:
-          LEAGUE_ID: ${{ vars.LEAGUE_ID }}
-          ESPN_USER: ${{ secrets.ESPN_USER }}
-          ESPN_PASS: ${{ secrets.ESPN_PASS }}
+      - name: STEP 1: Fetch Raw Data from ESPN
+        run: python ${{ github.workspace }}/pipeline/fetch_all_with_playwright.py
 
-      # Step 8: Commit the updated data files back to your repository
-      - name: 8. Commit New Data
+      - name: STEP 2: Process Raw Data into Clean Files
+        run: python ${{ github.workspace }}/pipeline/process_data.py
+
+      - name: Commit data files
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "📊 Chore: Automated fantasy data update"
-          file_pattern: docs/data/team_rosters.json docs/data/players_summary.json docs/data/espn_mTeam.json
+          commit_message: "📊 Chore: Update fantasy data"
+          # THE FIX: Use a wildcard to commit all generated JSON files.
+          file_pattern: docs/data/*.json
