--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -20,8 +20,8 @@ jobs:
         run: pip install -r requirements.txt
       - name: Install Playwright Browsers
         run: python -m playwright install chromium
-      - name: Fetch and Process Data
-        run: python pipeline/fetch_data.py
+      - name: Scrape and Process Data
+        run: python pipeline/scraper.py
       - name: Commit data files
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
