--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-requests>=2.32.3
-pytz>=2024.1
-python-dateutil>=2.9.0.post0
-cloudscraper>=1.2.71
-playwright>=1.54.0
+nfl-data-py
+pandas
+requests
