--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -1,17 +1,51 @@
-name: Run Draft Tier Analysis
+name: Fetch and Analyze NFL Data
 
 on:
-  workflow_dispatch: # Allows you to run this manually from the Actions tab
+  workflow_dispatch:
+  schedule:
+    - cron: '0 10 * * *' # Runs daily at 10:00 UTC
 
 jobs:
-  run-draft-analyzer:
+  # Job 1: Fetches the base NFL data and weather info
+  fetch-base-data:
+    name: 1. Fetch NFL Base Data
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install Dependencies
+        run: pip install -r requirements.txt
+
+      - name: Run Data Collection Script
+        run: python pipeline/get_nfl_data.py
+
+      - name: Upload Data Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: analysis-data
+          path: docs/data/analysis/
+
+  # Job 2: Runs the analysis scripts after the base data is fetched
+  run-analysis:
+    name: 2. Run Analysis Scripts
+    runs-on: ubuntu-latest
+    needs: fetch-base-data # This job will not start until 'fetch-base-data' is complete
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+
+      - name: Download Base Data Artifact
+        uses: actions/download-artifact@v4
         with:
-          fetch-depth: 0
+          name: analysis-data
+          path: docs/data/analysis/
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -21,5 +55,14 @@ jobs:
       - name: Install Dependencies
         run: pip install -r requirements.txt
 
-      - name: Run Draft Tier Generator Script
+      - name: Run Waiver Wire Script
+        run: python analysis/waiver_wire.py
+
+      - name: Run Draft Tier Script
         run: python analysis/draft_tier_generator.py
+
+      - name: Commit All Data Files
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "🏈 Chore: Update all NFL analysis data"
+          file_pattern: "docs/data/analysis/*.json docs/data/analysis/*.csv"
