--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -3,7 +3,7 @@ name: Build Player Points (League-Scoring)
 on:
   workflow_dispatch:
   schedule:
-    - cron: "15 9 * * 4"   # Thu 09:15 UTC (adjust if you want)
+    - cron: "15 9 * * 4"   # Thu 09:15 UTC
 
 jobs:
   build-points:
@@ -21,6 +21,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
 
       - name: Get NFL data
         run: |
